
syntax = "proto3";

package aiserver.v1;



// 因为还不能检测是否依赖这个 proto 文件，所以先手动 import 一下
import "google/protobuf/timestamp.proto";



      
service AnalyticsService {

  rpc TrackEvents(TrackEventsRequest) returns (TrackEventsResponse);
}


message EventData {
  string string_value = 1;
  int64 int_value = 2;
  bool bool_value = 3;
  double double_value = 4;
  
}
  


message AnalyticsEvent {
  string event_name = 1;
  map<string, EventData> event_data = 2;
  int64 timestamp = 3;
  
}
  


message TrackEventsRequest {
  AnalyticsEvent events = 1;
  
}
  


message TrackEventsResponse {
  
}
  

